src/styles/ui/menu.module.css
.menuContainer {
    position: fixed;
    top: 0;
    left: 0;

    overflow: hidden;
    z-index: 50;
    width: calc(var(--space-sidebar) - var(--space-lg) + var(--space-lg));
    max-width: 100%;
    z-index: 50;

    background: linear-gradient(var(--color-background) 45%,
            var(--color-background-07) 75%,
            transparent 100%);

    max-height: 100px;
    min-height: 90px;
    transition: max-height 3s ease-in-out;

    padding: 0 var(--space-lg);
    padding-top: var(--space-lg);
}

.menuContainer.expanded {
    max-height: 300px;
    min-height: 200px;
}

.menuBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer;
}

.menuText {
    margin-right: auto;
    font-size: calc(1.2 *var(--font-lg));
    font-variation-settings: var(--var-lg);
}

.rightIcons {
    display: flex;
    gap: 10px;
}

.menuDropdown {
    margin-top: 0;
}

.menuDropdown a {
    font-size: calc(1.2 *var(--font-lg));
    display: block;
    text-decoration: none;
    color: var(--color-foreground);
    font-variation-settings: var(--var-lg);
}


@media (max-width: 768px) {
    .menuContainer {
        width: calc(100% - var(--space-sm) * var(--space-sm));
        top: 0;
        left: var(--space-md);
        right: var(--space-md);
    }

}

